# Agent_Google_Customer_Client

./: .env.example  .gitignore  README.md  deploy.py  pyproject.toml  service_account.json  test_local.py  test_remote.py
.venv_py311/: pyvenv.cfg
.venv_py311/Scripts/: activate  activate.bat
customer_service/: __init__.py  agent.py  config.py  prompts.py
customer_service/entities/: customer.py
customer_service/shared_libraries/: callbacks.py
customer_service/tools/: tools.py
deployment/: deploy.py
eval/: test_eval.py
eval/eval_data/: full_conversation.test.json  simple.test.json
eval/sessions/: 123.session.json
tests/unit/: test_config.py  test_tools.py
